# Google_Solution

GSC/: .dockerignore  .env.example  .gitignore  Dockerfile  deploy.txt  firebase_config.py  gen-lang-client-0383117436-ed65756184d8.json  gg.py  ggchad.py  initstream.py  kconsumer.py  kproducer.py  pyproject.toml  solution-4f24a-firebase-adminsdk-fbsvc-8d8a282892.json  streaming.py  zk and kafka codes.txt
react-admin/: package-lock.json  package.json
react-admin/src/: App.js  index.css
react-admin/src/components/: FileUpload.jsx  GeographyChart.jsx  UploadModal.jsx
react-admin/src/data/: mockData.js
react-admin/src/scenes/dashboard/: DetectedContent.jsx  LiveScanPanel.jsx  NotificationBox.jsx  Statistics.jsx  ViolationSummary.jsx  ViolationTable.jsx  index.jsx
react-admin/src/scenes/global/: Sidebar.jsx  sidebar.jsx
